--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,10 +1,10 @@
-<footer class="footer mt-6">
+<footer class="footer mt-4 has-background-dark has-text-grey-light">
     <div class="container">
       <article class="content has-text-centered">
         <p class="is-flex is-align-items-center is-justify-content-center">
           <img class="image is-32x32 is-inline" src="/images/logo-footer.png" alt="(Whether)Weather">&nbsp;
           <img class="image is-32x32 is-inline" src="/images/branding.png" alt="(Whether)Weather">
-          <span>&nbsp;&nbsp;Your.Forecast</span>
+          <strong class="has-text-warning">&nbsp;&nbsp;whether Weather</strong>&nbsp;- Your.Forecast demo built with HTML, CSS, Bulma & Eleventy.
         </p>
       </article>
     </div>
