--- a/_includes/nav.njk
+++ b/_includes/nav.njk
@@ -1,4 +1,4 @@
-<nav class="navbar is-large">
+<nav class="navbar is-large has-shadow">
     <div class="container is-three-quarters">
 
       <div class="navbar-brand">
@@ -13,12 +13,12 @@
         </span>
       </div>
     
-      <div id="navbarMenu" class="navbar-menu">
+      <div id="navbarMenu" class="navbar-menu"><!-- is-active?  -->
         <div class="navbar-end">
-          <a href="/" class="navbar-item has-text-warning has-text-weight-bold">Home</a>
-          <a href="/dashboard" class="navbar-item has-text-warning has-text-weight-bold">Dashboard</a>
-          <a class="navbar-item has-text-warning has-text-weight-bold">Settings</a>
-          <a class="navbar-item has-text-warning has-text-weight-bold">More+</a>
+          <a href="/" class="navbar-item has-text-dark">Home</a>
+          <a href="/dashboard" class="navbar-item has-text-dark">Dashboard</a>
+          <a href="/impress" class="navbar-item has-text-dark">Health & Sunlight</a>
+          <a href="/settings" class="navbar-item has-text-dark">Settings</a>
         </div>
       </div>
 
