--- a/dashboard.njk
+++ b/dashboard.njk
@@ -5,8 +5,7 @@ subtitle: Today
 ---
 
 <div class="container is-three-quarters">
-  <section class="mt-6">
-    <div class="columns is-multiline is-centered p-6 m-6">
+    <div class="columns is-multiline is-centered p-6">
       {% set page = "/index" %}
       {% set cityName = "Dublin" %}
       {% set dashImage = "/images/partly-clouded.png" %}
