--- a/_includes/forecast-dashboard-component.njk
+++ b/_includes/forecast-dashboard-component.njk
@@ -1,10 +1,10 @@
 <div class="column is-one-third">
-    <section class="card has-background-dark has-text-white">
-        <article class="card-content has-text-centered p-3">
-            <a href="{{page}}"><!-- /index -->
+    <section class="card has-background-grey has-text-white has-text-weight-bold">
+        <article class="card-content has-text-centered">
+            <a href="{{page}}">
                 <p> {{cityName}} </p>
                 <figure class="image is-48x48 mx-auto my-2">
-                    <img src="{{dashImage}}" alt="Image"><!-- "/images/partly-clouded.png"  -->
+                    <img src="{{dashImage}}" alt="Image">
                 </figure>
                 <p> {{dashWeatherForecast}} </p>
             </a>
