few updates in the readme and ux, nothing major

--- a/_includes/forecast-dashboard-component.njk
+++ b/_includes/forecast-dashboard-component.njk
@@ -1,5 +1,5 @@
 <div class="column is-one-third">
-    <section class="card has-background-grey has-text-white has-text-weight-bold">
+    <section class="card has-background-dark has-text-white has-text-weight-bold">
         <article class="card-content has-text-centered">
             <a href="{{page}}">
                 <p> {{cityName}} </p>
