--- a/_includes/forecast-table-component.njk
+++ b/_includes/forecast-table-component.njk
@@ -10,7 +10,7 @@
         </thead>
         <tbody>
         <tr>
-            <th class="has-background-grey has-text-white">Weather</th>
+            <th class="has-background-info has-text-white">Weather</th>
             <td class="has-text-centered">
             <figure class="image is-32x32 is-inline-block">
                 <img src="{{rightNowImage}}" alt="Image">
@@ -28,19 +28,19 @@
             </td>
         </tr>
         <tr>
-            <th class="has-background-grey has-text-white">Chance of Precipitation</th>
+            <th class="has-background-info has-text-white">Chance of Precipitation</th>
             <td class="has-text-centered"> {{rightNowPrecipitation}} </td>
             <td class="has-text-centered"> {{maxPrecipitation}} </td>
             <td class="has-text-centered"> {{minPrecipitation}} </td>
         </tr>
         <tr>
-            <th class="has-background-grey has-text-white">Wind</th>
+            <th class="has-background-info has-text-white">Wind</th>
             <td class="has-text-centered"> {{rightNowWind}} </td>
             <td class="has-text-centered"> {{maxWind}} </td>
             <td class="has-text-centered"> {{minWind}} </td>
         </tr>
         <tr>
-            <th class="has-background-grey has-text-white">Temperature</th>
+            <th class="has-background-info has-text-white">Temperature</th>
             <td class="has-text-centered has-background-warning"> {{rightNowTempo}} </td>
             <td class="has-text-centered has-background-warning"> {{maxTempo}} </td>
             <td class="has-text-centered has-background-warning"> {{minTempo}} </td>
