--- a/_includes/nav.njk
+++ b/_includes/nav.njk
@@ -1,9 +1,9 @@
-<nav class="navbar is-large has-shadow">
+<nav class="navbar has-shadow">
     <div class="container is-three-quarters">
 
       <div class="navbar-brand">
         <a class="navbar-item" href="#">
-          <img class="navbar-logo" src="/images/logo.png" alt="Logo" />
+          <img class="navbar-logo" src="/images/logo.png" alt="Logo"/>
         </a>
       
         <span class="navbar-burger" data-target="navbarMenu" aria-expanded="false">
@@ -13,7 +13,7 @@
         </span>
       </div>
     
-      <div id="navbarMenu" class="navbar-menu"><!-- is-active?  -->
+      <div id="navbarMenu" class="navbar-menu">
         <div class="navbar-end">
           <a href="/" class="navbar-item has-text-dark">Home</a>
           <a href="/dashboard" class="navbar-item has-text-dark">Dashboard</a>
