--- a/_includes/forecast-card-component.njk
+++ b/_includes/forecast-card-component.njk
@@ -1,5 +1,5 @@
 <div class="column is-one-seventh mt-4">
-    <section class="card has-background-grey has-text-white">
+    <section class="card has-background-dark has-text-white">
         <article class="card-content has-text-centered p-3">
             <p class="has-text-weight-bold"> {{forecastWeeklyDay}} </p>
             <figure class="image is-48x48 mx-auto my-2">
